# document-ai

./: .gitignore  README.md  index.html  main.py  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: release.yml
doc_intelligence/: __init__.py  base.py  config.py  extractor.py  formatter.py  llm.py  parser.py  processer.py  pydantic_to_json_instance_schema.py  utils.py
doc_intelligence/schemas/: core.py  pdf.py
doc_intelligence/types/: pdf.py
docs/: index.md  quickstart.md
document_ai/: __init__.py  base.py  extractor.py  formatter.py  llm.py  parser.py  processer.py  schemas.py  types.py  utils.py
notebooks/: architecture.drawio  general.ipynb  lab.ipynb
notebooks/pdf/: digital_pdf.ipynb
quickstart/: index.html
search/: search_index.json
tests/: test_pydantic_to_json_instance_schema.py
