[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "doc-intelligence"
version = "0.0.7"
description = "Document AI - Intelligent document processing and extraction"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-genai>=1.57.0",
    "langchain>=1.2.9",
    "loguru>=0.7.3",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "openai>=2.15.0",
    "pdfplumber>=0.11.9",
    "pre-commit>=4.5.1",
    "pymupdf>=1.26.7",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "pyrefly>=0.48.2",
    "ruff>=0.14.13",
]

[tool.hatch.build.targets.wheel]
packages = ["document_ai"]

[tool.ruff.lint]
select = ["I"]
exclude = ["notebooks/"]

[tool.ty.src]
exclude = ["notebooks/"]

[tool.uv.build-backend]
module-name = "document_ai"
module-root = ""
